--- a/app.css
+++ b/app.css
@@ -2,5 +2,12 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 60%;
+    width: 55%;
+    border: solid;
+    border-width: 10px;
+}
+
+.dd {
+    margin-left: .5%;
+    margin-top: .5%;
 }
