--- a/app.css
+++ b/app.css
@@ -7,7 +7,30 @@
     border-width: 10px;
 }
 
-.dd {
+.dropdown {
+    display: inline-block;
+    position: relative;
     margin-left: .5%;
     margin-top: .5%;
-}
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    width: 100%;
+    overflow: auto;
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
+  }
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  .dropdown-content a {
+    display: block;
+    color: #000000;
+    padding: 5px;
+    text-decoration: none;
+  }
+  .dropdown-content a:hover {
+    color: #FFFFFF;
+    background-color: #00A4BD;
+  }
+  
