--- a/app.css
+++ b/app.css
@@ -86,7 +86,6 @@
       color: #F04A49;
       font-size: 25px;
       padding: 10px 20px;
-      
   }
   
   button:hover {
@@ -149,9 +148,9 @@
   
   button {
       margin-top: 50px;
-      background-color: rgba(255,255,255,0.3);
-      border: 3px solid #F04A49;
-      color: #F04A49;
+      background-color: rgba(44, 181, 235, 0.638);
+      border: 3px solid #4994f0;
+      color: #49e2f0;
       font-size: 25px;
       padding: 10px 20px;
       
@@ -167,5 +166,10 @@
   p {
       margin: 1em 0;
     font-size: 16px;
+  }
+
+  .water {
+    width: 30px;
+    height:30px;
   }
   
