--- a/app.css
+++ b/app.css
@@ -124,7 +124,8 @@
     color: #ffffff;
     font-size: 25px;
     padding: 10px 20px;
-    border-radius: 10px;
+    border-radius: 15px;
+    
 }
   .location-button:hover {
     background-color: #a89e9ea1;
@@ -141,6 +142,23 @@
   
   #img-container button {
     position: absolute;
-    top: 50px;
-    left: 50px;
+    top: 50%;
+    left: 50%;
   }
+
+  .popup-content {
+    background-color: #fff;
+    width: 300px;
+    padding: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+}
