--- a/app.css
+++ b/app.css
@@ -29,7 +29,7 @@
     top: 50%;
     margin-top: -100px;
     background: #FFF;
-    border: 3px solid #F04A49;
+    border: 3px solid #000000;
     z-index: 20;
   }
   
